# surf

./: .dev.vars.example  .env.example  .gitattributes  .gitignore  .npmrc  AGENTS.md  AI_POLICY.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
cc_state/: README.md
cc_state/_template/: WORKSTREAM.md
cc_state/noaa-surf-engine/: PRD.md  RESEARCH.md  RFC.md  SESSION-LOG.md  WORKSTREAM.md  brief-one-shot-v1.md  clickops-checklist.md  implementation-plan.md  session-brief-calibrate-break-truth.md
docs/: README.md  accuracy-evaluation-manifest.json  accuracy-evaluation.md  architecture.md  doc-map.md  feed-adapters.md  runtime-operations.md  self-hosting.md
scripts/: cf-deploy.mjs  cf-provision.mjs  check-portability.mjs  smoke-local.mjs  verify-local-d1.mjs  wrangler.mjs
scripts/lib/: cloudflare-commands.mjs  deploy-url.mjs  (+4 more)
services/extractor/: README.md  pyproject.toml
services/extractor/src/surf_extractor/: __init__.py  backtest.py  cdip.py  cli.py  feeds.py  ndfd_history.py
services/extractor/tests/: test_backtest.py  test_cdip.py  test_cli.py  test_feeds.py  test_ndfd_history.py
services/extractor/tests/fixtures/: ndfd_scan_order_cross_check.json
(+43 files in other folders)
